# nrm-extra

./: .gitignore  .licenserc.yml  Makefile.am  README.md  configure.ac  default.nix  shell.nix
.github/workflows/: builds.yml  style.yml
ctests/: Makefile.am
ctests/mpi/: Makefile.am
ctests/omp/: Makefile.am  omp_basic.c
extra/omp/: omp-tools-events.yaml  omp-tools-gen.rb  omp-tools.h  omp-tools.yaml
ftests/: Makefile.am  mpi_basic.f90  mpi_collectives.f90
nix/: libnrm.nix  nrm-extra.nix  variorum.nix
src/: Makefile.am
src/common/: extra.c  extra.h
src/mpi/: Makefile.am  f_mpi_bindings.c  mpi_api.c  nrm_mpi.h
src/omp/: Makefile.am  entrypoint.c  nrm_omp.h  nrm_omp_callbacks.c
src/perfwrapper/: Makefile.am  perfwrapper.c
src/power-papi/: nrmpower_papi.c
src/power_apmidg/: nrmpower_apmidg.c
src/power_geopm/: nrmpower_geopm.c
src/power_papi/: nrmpower_papi.c
src/power_variorum/: Makefile.am  nrmpower_variorum.c
src/powerwrapper/: Makefile.am  nrmpower.c
src/powerwrapper_papi/: Makefile.am  cmpevents.c  nrmpower_papi.c
src/powerwrapper_variorum/: Makefile.am  nrmpower_variorum.c
